# whamm-fuel

./: .gitignore  Cargo.toml  README.md  output-max.wasm  output-max.wat  output-min.wasm  output-min.wat  stitching.mm
src/: analyze.rs  codegen.rs  lib.rs  main.rs  reduce.rs  run.rs  slice.rs  utils.rs
src/codegen/: max.rs  min.rs
tests/: calls.wasm  globals.wasm  globals.wat  loads.wat  main.rs  utils.rs
tests/programs/: add.wat  calls.wasm  calls.wat  globals.wasm  loads.wasm  malloc_init.wat  mem-ops.wat  mem-ops2.wat  params-edge1.wasm  params-edge1.wat  params.wasm  params.wat
tests/programs/exp_out/: add.wasm.out  calls.wasm.out  globals.wasm.out  loads.wasm.out  malloc_init.wasm.out  mem-ops.wasm.out  mem-ops2.wasm.out  params-edge1.wasm.out  params.wasm.out
