[package]
name = "whamm-fuel"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "whamm_fuel"
path = "src/main.rs"

[dependencies]
wirm = "=2.2.0"
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
termcolor = "1.4.1"

[dev-dependencies]
# To check validity of modules
wasmtime = "38.0.3"
wasi-common = "38.0.3"
termcolor = "1.4.1"
